--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,7 +51,7 @@ nav .publishHeader a.newJobBtn:hover{background: #6db493}
     }
 
     .publishBody.opened {
-        max-height:400px;
+        max-height:700px;
         -moz-transform:rotateX(0deg);
         -webkit-transform:rotateX(0deg);
     }
@@ -200,98 +200,44 @@ footer{text-align: center;font-size: 12px;padding: 20px 0;color: #bbb;font-weigh
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     body{background: yellow;}
-    #geeksoho:before{
-        content: '111111';
-        position: fixed;
-        top:0;
-        left:0;
-    }
 }
   
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width : 321px) {
-    /*body{background: red;}*/
-    #geeksoho:before{
-        content: '222222';
-        position: fixed;
-        top:0;
-        left:0;
-    }
+    body{background: red;}
 }
   
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 320px) {
     body{background: black;}
-    #geeksoho:before{
-        content: '33333';
-        position: fixed;
-        top:0;
-        left:0;
-    }
 }
   
 /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
     body{background: blue;}
-    #geeksoho:before{
-        content: '44444';
-        position: fixed;
-        top:0;
-        left:0;
-    }
 }
   
 /* iPads (landscape) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
     body{background: green;}
-    #geeksoho:before{
-        content: '55555';
-        position: fixed;
-        top:0;
-        left:0;
-    }
 }
   
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
     body{background: purple;}
-    #geeksoho:before{
-        content: '66666';
-        position: fixed;
-        top:0;
-        left:0;
-    }
 }
   
 /* Desktops and laptops ----------- */
 @media only screen and (min-width : 1224px) {
-
-    #geeksoho:before{
-        content: '77777';
-        position: fixed;
-        top:0;
-        left:0;
-    }
+    body{background: #ecf0f1;}
 }
   
 /* Large screens ----------- */
 @media only screen and (min-width : 1824px) {
     body{background: #BC8F8F;}
-    #geeksoho:before{
-        content: '88888';
-        position: fixed;
-        top:0;
-        left:0;
-    }
 }
   
 /* iPhone 4 ----------- */
 @media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
     body{background: #F08080;}
-    #geeksoho:before{
-        content: '99999';
-        position: fixed;
-        top:0;
-        left:0;
-    }
 } 
