--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,9 +16,9 @@
     <![endif]-->
 
     <link rel="stylesheet" href="static/css/base.css" />
-    <script type="text/javascript" src="static/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery-1.11.0-beta2.min.js"></script>
     <script type="text/javascript" src="static/js/jquery.pjax.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web|Londrina+Shadow' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Titillium+Web|Londrina+Shadow' rel='stylesheet' type='text/css'> -->
     <script>
         // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,7 +32,7 @@
 <body vocab="http://schema.org">
 <div id="geeksoho">
     <header>
-        <h1><a href="/test">GEEKSOHO</a></h1>
+        <h1><a href="/">GEEKSOHO</a></h1>
         <p>找SOHO工作，上GEEKSOHO！</p>
     </header>
 
@@ -42,24 +42,38 @@
             <a href="javascript:void(0)" class="newJobBtn"><i class="icon-plus"></i></a>
         </div>
         <div class="publishBody">
-            <form role="form">
+            <form role="form" method="POST" action="">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                    <label>职位名称</label>
+                    <input type="text" class="form-control" name="title" placeholder="职位名称">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label>职位链接(选填)</label>
+                    <input type="text" class="form-control" name="link" placeholder="职位链接">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputFile">File input</label>
-                    <input type="file" id="exampleInputFile">
-                    <p class="help-block">Example block-level help text here.</p>
+                    <label>公司名称</label>
+                    <input type="text" class="form-control" name="company" placeholder="公司名称">
                 </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Check me out
-                    </label>
+                <div class="form-group">
+                    <label>微博(选填)</label>
+                    <input type="text" class="form-control" name="company_weibo" placeholder="微博">
+                </div>
+                <div class="form-group">
+                    <label>官网(选填)</label>
+                    <input type="text" class="form-control" name="company_website" placeholder="官网">
+                </div>
+                <div class="form-group">
+                    <label>工作城市</label>
+                    <input type="text" class="form-control" name="city" placeholder="工作城市">
+                </div>
+                <div class="form-group">
+                    <label>月薪</label>
+                    <input type="text" class="form-control" name="salary" placeholder="月薪">
+                </div>
+                <div class="form-group">
+                    <label>职位介绍</label>
+                    <textarea name="intro" class="form-control" ></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
@@ -70,7 +84,7 @@
     {% block content %}{% endblock %}
     </div>
     <footer>
-        &copy; 2013
+        &copy; 2013 by <a href="http://han.im" target="_blank"></a>J.Y Han
     </footer>
 
     <div id="loadingWraper">
